# groebner-basis

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  generate_tests.py  groebner_basis.cpp  groebner_basis.h  main.cpp  tests.txt  tostringhelper.cpp  tostringhelper.h  vcpkg.json
src/: bench.cpp  functions.h  groebner_basis.h  main.cpp  monom.h  orders.h  polynom.h  polynomfunctions.h  polynomialsset.h  term.h  tests.cpp  types.h
